# conan-pngquant_installer

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  appveyor.yml  build.py  conanfile.py
test_package/: CMakeLists.txt  conanfile.py  example.c
